@@ -5,6 +5,7 @@ import java.util.HashMap;
 import java.util.Map;
 
 import org.bukkit.configuration.ConfigurationSection;
+import org.bukkit.configuration.serialization.ConfigurationSerialization;
 import org.bukkit.plugin.java.JavaPlugin;
 
 import name.richardson.james.bukkit.utilities.persistence.YAMLStorage;
@@ -13,32 +14,36 @@ public class WorldConfiguration extends YAMLStorage {
 
   public static final String FILE_NAME = "worlds.yml";
   
-  private final ConfigurationSection worlds;
+  private final ConfigurationSection section;
   
   public WorldConfiguration(JavaPlugin plugin) throws IOException {
     super(plugin, FILE_NAME);
-    worlds = this.configuration.getConfigurationSection("worlds");
+    section = this.configuration.getConfigurationSection("worlds");
+    ConfigurationSerialization.registerClass(World.class, "World");
   }
   
   public void setDefaults() throws IOException {
     super.setDefaults();
     if (!configuration.isConfigurationSection("worlds")) {
-      this.configuration.set("worlds", "");
+      this.configuration.createSection("worlds");
+      this.save();
     }
   }
 
   public Map<String, World> getWorlds() {
     Map<String, World> worlds = new HashMap<String, World>(8);
-    for (String key : this.worlds.getKeys(false)) {
-      final World world = (World) this.worlds.get(key);
-      worlds.put(world.getName(), world);
+    if (this.section.getKeys(false) != null) {
+      for (String key : this.section.getKeys(false)) {
+        final World world = (World) this.section.get(key);
+        worlds.put(world.getName(), world);
+      }
     }
     return worlds;
   }
   
   public void setWorlds(Map<String, World> worlds) {
     for (World world : worlds.values()) {
-      this.worlds.set(world.getUUID().toString(), world);
+      this.section.set(world.getName(), world);
     }
     try {
       this.save();
